src/main/java/com/example/demo/errors/domain/ReturningError.java
package com.example.demo.errors.domain;

import org.springframework.http.HttpStatus;

import lombok.Builder;
import lombok.Getter;
import lombok.Setter;

@Builder
@Getter
@Setter
public class ReturningError {
    private String message;
    private Integer status;
    private String code;
}
